--- a/adminassets/css/yupnep.css
+++ b/adminassets/css/yupnep.css
@@ -3,3 +3,12 @@
 .mar-175-btm{
 margin-bottom: 160px;
 }
+.site_title_panel{
+vertical-align: middle;
+padding-top:10px;
+padding-bottom:10px;
+}
+.title_site_disp{
+margin-top:10px;
+
+}
